--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 # Default ignored files
 /shelf/
-/workspace.xml
+/.idea/workspace.xml
 # Datasource local storage ignored files
 /../../../../../:\code\java\Chat\.idea/dataSources/
 /dataSources.local.xml
 # 基于编辑器的 HTTP 客户端请求
 /httpRequests/
+
+/out/
+
+/src/view/vue.js
+/lib/
